public/stylesheets/ie.css
@font-face {
    font-family: JLEE;
    src: url('/fonts/JLEE.eot');
}

body, html {
    overflow: hidden;
}

#content {
    display: table-row;
}

#left_side_pane {
    top: 65px;
}
/*
#right_side_pane {
    top: 85px;
}

#center_pane {
    top: 85px;
}
*/

#top_pane {
    top: 85px;
}

#how_it_works {
    top: 65px;
}

#show_attendees_list {
    width: 197px;
}

#zoom_in_btn{
    top:75px;
}
#zoom_out_btn{
    top:95px;
}
#zoom_btn_img{
    top: 75px;
    position:absolute;
}

.rounded-corners-four{
/*    behavior: url(PIE.htc);*/
}
.rounded-corners-fifteen{
/*    behavior: url(PIE.htc);*/
}

.fc-header{
    background-color: #4f4f4d;
}

.event-type-name{
    font: 11px/11px Arial, Helvetica, sans-serif;
}

